--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "author": "Juan Rosales",
   "license": "ISC",
   "dependencies": {
+    "@slack/webhook": "^7.0.4",
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -32,7 +33,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.13"
+    "morgan-body": "^2.6.9",
+    "nodemailer": "^6.9.13",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
