--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "utad_dwes_practica1": "file:",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -56,6 +57,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
+    "@types/ws": "^8.5.14",
     "jest": "^29.7.0",
     "node-mocks-http": "^1.16.2",
     "nodemon": "^3.1.0",
